--- a/src/Resources/views/fields/content_fields.html.twig
+++ b/src/Resources/views/fields/content_fields.html.twig
@@ -6,11 +6,13 @@
     {% apply spaceless %} %}
         {% if not ez_field_is_empty( content, field ) %}
             <ul {{ block( 'field_attributes' ) }}>
-                {% for contentId in field.value.destinationContentIds if parameters.available[contentId] %}
-                     {{ fos_httpcache_tag('relation-' ~ contentId) }}
-                    <li>
-                        {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
-                    </li>
+                {% for contentId in field.value.destinationContentIds %}
+                    {% if parameters.available[contentId] %}
+                        {{ fos_httpcache_tag('relation-' ~ contentId) }}
+                        <li>
+                            {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         {% endif %}
