--- a/src/Resources/views/fields/content_fields.html.twig
+++ b/src/Resources/views/fields/content_fields.html.twig
@@ -3,22 +3,24 @@
 {% extends "EzPublishCoreBundle::content_fields.html.twig" %}
 
 {% block ezobjectrelationlist_field %}
-    {% spaceless %}
+    {% apply spaceless %} %}
         {% if not ez_field_is_empty( content, field ) %}
             <ul {{ block( 'field_attributes' ) }}>
-                {% for contentId in field.value.destinationContentIds if parameters.available[contentId] %}
-                     {{ fos_httpcache_tag('relation-' ~ contentId) }}
-                    <li>
-                        {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
-                    </li>
+                {% for contentId in field.value.destinationContentIds %}
+                    {% if parameters.available[contentId] %}
+                        {{ fos_httpcache_tag('relation-' ~ contentId) }}
+                        <li>
+                            {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         {% endif %}
-    {% endspaceless %}
+    {% endapply %}
 {% endblock %}
 
 {% block ezimageasset_field %}
-    {% spaceless %}
+    {% apply spaceless %} %}
         {% if not ez_field_is_empty(content, field) and parameters.available %}
             {{ fos_httpcache_tag('relation-' ~ field.value.destinationContentId) }}
             <div {{ block('field_attributes') }}>
@@ -32,16 +34,16 @@
                 }))}}
             </div>
         {% endif %}
-    {% endspaceless %}
+    {% endapply %}
 {% endblock %}
 
 {% block ezobjectrelation_field %}
-    {% spaceless %}
+    {% apply spaceless %} %}
         {% if not ez_field_is_empty( content, field ) and parameters.available %}
             {{ fos_httpcache_tag('relation-' ~ field.value.destinationContentId) }}
             <div {{ block( 'field_attributes' ) }}>
                 {{ render( controller( "ez_content:viewAction", {'contentId': field.value.destinationContentId, 'viewType': 'text_linked', 'layout': false} ) ) }}
             </div>
         {% endif %}
-    {% endspaceless %}
+    {% endapply %}
 {% endblock %}
