EZP-30906: Removed deprecated templating component integration

--- a/src/Resources/views/fields/content_fields.html.twig
+++ b/src/Resources/views/fields/content_fields.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain "content_fields" %}
 
-{% extends "EzPublishCoreBundle::content_fields.html.twig" %}
+{% extends "@EzPublishCore/content_fields.html.twig" %}
 
 {% block ezobjectrelationlist_field %}
     {% apply spaceless %}
