--- a/src/Resources/views/fields/content_fields.html.twig
+++ b/src/Resources/views/fields/content_fields.html.twig
@@ -8,7 +8,7 @@
             <ul {{ block( 'field_attributes' ) }}>
                 {% for contentId in field.value.destinationContentIds %}
                     {% if parameters.available[contentId] %}
-                        {{ fos_httpcache_tag('relation-' ~ contentId) }}
+                        {{ ez_http_tag_relation_ids(contentId) }}
                         <li>
                             {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
                         </li>
@@ -22,7 +22,7 @@
 {% block ezimageasset_field %}
     {% apply spaceless %}
         {% if not ez_field_is_empty(content, field) and parameters.available %}
-            {{ fos_httpcache_tag('relation-' ~ field.value.destinationContentId) }}
+            {{ ez_http_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block('field_attributes') }}>
                 {{ render(controller('ez_content:embedAction', {
                     contentId: field.value.destinationContentId,
@@ -40,7 +40,7 @@
 {% block ezobjectrelation_field %}
     {% apply spaceless %}
         {% if not ez_field_is_empty( content, field ) and parameters.available %}
-            {{ fos_httpcache_tag('relation-' ~ field.value.destinationContentId) }}
+            {{ ez_http_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block( 'field_attributes' ) }}>
                 {{ render( controller( "ez_content:viewAction", {'contentId': field.value.destinationContentId, 'viewType': 'text_linked', 'layout': false} ) ) }}
             </div>
